@@ -33,6 +33,8 @@ icon:plus[] Core: The core Vert.x library was updated to version `3.8.5`.
 
 icon:check[] OrientDB: The included OrientDB version has been updated to version `3.0.27`
 
+icon:check[] GraphQL: Errors during GraphQL queries are now correctly propagated to the client.
+
 [[v1.4.0]]
 == 1.4.0 (24.01.2020)
 
